[workspace]
resolver = "3"
members = ["analysis", "dod", "native"]

[workspace.package]
edition = "2024"
version = "0.8.0"

[workspace.dependencies]
clap = "4.5.41"
dem = "0.2.3"
eframe = "0.32.0"
egui = "0.32.0"
egui-file-dialog = "0.11.0"
egui_extras = "0.32.0"
egui_plot = "0.33.0"
filetime = "0.2.25"
humantime = "2.2.0"
nom = "8.0.0"
serde_json = "1.0.141"
tabled = "0.20.0"
tokio = "1.46.1"
