[package]
name = "native"
version.workspace = true
edition.workspace = true
default-run = "dod-tools-gui"

[dependencies]
analysis = { path = "../analysis" }

eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
egui-file-dialog = "0.9.0"
egui_plot = "0.31.0"
filetime = "0.2.25"
humantime = "2.2.0"
tabled = "0.18.0"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "dod-tools-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "dod-tools-cli"
path = "src/bin/cli.rs"
