[package]
name = "native"
version.workspace = true
edition.workspace = true
default-run = "dod-tools-gui"

[dependencies]
analysis = { path = "../analysis" }
clap = { workspace = true, features = ["derive"] }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-file-dialog = { workspace = true }
egui_plot = { workspace = true }
filetime = { workspace = true }
humantime = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tabled = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "dod-tools-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "dod-tools-cli"
path = "src/bin/cli.rs"
